force-app/main/default/objects/Customer_Onboarding__c/fields/Send_mail_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Send_mail_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send mail Pickup</label>
    <type>Checkbox</type>
</CustomField>