force-app/main/default/objects/Customer_Onboarding__c/fields/Send_SMS_NDR__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_NDR__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send SMS NDR</label>
    <type>Checkbox</type>
</CustomField>