force-app/main/default/objects/Customer_Onboarding__c/fields/Send_to_Operating_Account__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Operating_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Operating Account?</label>
    <type>Checkbox</type>
</CustomField>