force-app/main/default/objects/Customer_Onboarding__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COD</fullName>
            </value>
            <value>
                <fullName>Pre-Paid</fullName>
            </value>
            <value>
                <fullName>DTO</fullName>
            </value>
            <value>
                <fullName>REPL</fullName>
            </value>
            <value>
                <fullName>MPS</fullName>
            </value>
            <value>
                <fullName>Fulfilment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>