force-app/main/default/objects/Customer_Onboarding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>On-boarded Manually</fullName>
            </value>
            <value>
                <fullName>Synced To HQ</fullName>
            </value>
            <value>
                <fullName>Synced To Oracle</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Send to godam</fullName>
            </value>
            <value>
                <fullName>Synced to Bird</fullName>
            </value>
            <value>
                <fullName>Error HQ</fullName>
            </value>
            <value>
                <fullName>Error Oracle</fullName>
            </value>
            <value>
                <fullName>Error Bird</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>