force-app/main/default/objects/Customer_Onboarding__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <label>Success</label>
    <length>255</length>
    <type>Text</type>
</CustomField>