force-app/main/default/objects/Customer_Onboarding__c/fields/Synced_to_Bird_As_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_Bird_As_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced to Bird As Addendum</label>
    <type>Checkbox</type>
</CustomField>