force-app/main/default/objects/Customer_Onboarding__c/fields/TAN_No__c.field-meta.xml
<CustomField>
    <fullName>TAN_No__c</fullName>
    <description>Tan Number for Fulfillment</description>
    <inlineHelpText>Tan Number for Fulfillment</inlineHelpText>
    <label>TAN No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>