force-app/main/default/objects/Customer_Onboarding__c/fields/Time_Invested__c.field-meta.xml
<CustomField>
    <fullName>Time_Invested__c</fullName>
    <formula>IF((FLOOR((Onboarding_Completed__c-Onboarding_Accepted__c))&gt;0), Text(FLOOR((Onboarding_Completed__c-Onboarding_Accepted__c))) + &quot; Days&quot;, &quot;0 Days&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Invested</label>
    <type>Text</type>
</CustomField>