force-app/main/default/objects/Customer_Onboarding__c/fields/UUID_Key__c.field-meta.xml
<CustomField>
    <fullName>UUID_Key__c</fullName>
    <description>UUID key received after Client Ware house is created</description>
    <label>UUID Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>