force-app/main/default/objects/Customer_Onboarding__c/fields/Volume_per_day__c.field-meta.xml
<CustomField>
    <fullName>Volume_per_day__c</fullName>
    <label>Volume per day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>