force-app/main/default/objects/Customer_Onboarding__c/fields/Wallet_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Notification_Email__c</fullName>
    <label>Wallet Notification Email</label>
    <type>Email</type>
</CustomField>