force-app/main/default/objects/Customer_Onboarding__c/fields/Warehouse_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Client_Id__c</fullName>
    <label>Warehouse Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>