force-app/main/default/objects/Customer_Onboarding__c/fields/X_Ray_Limit__c.field-meta.xml
<CustomField>
    <fullName>X_Ray_Limit__c</fullName>
    <defaultValue>7000</defaultValue>
    <label>X-Ray Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>