force-app/main/default/objects/Customer_Onboarding__c/recordTypes/Customer_Onboarding_Layout.recordType-meta.xml
<RecordType>
    <fullName>Customer_Onboarding_Layout</fullName>
    <active>true</active>
    <label>Customer Onboarding Layout</label>
</RecordType>