force-app/main/default/objects/Customer_Onboarding__c/recordTypes/Fulfillment.recordType-meta.xml
<RecordType>
    <fullName>Fulfillment</fullName>
    <active>true</active>
    <description>For Fulfillment Opportunities</description>
    <label>Fulfillment</label>
</RecordType>