force-app/main/default/objects/Customer_Onboarding__c/recordTypes/Read_Only_custom.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_custom</fullName>
    <active>true</active>
    <label>Read Only custom</label>
</RecordType>