force-app/main/default/objects/Customer_Onboarding__c/recordTypes/SaaS_Cob.recordType-meta.xml
<RecordType>
    <fullName>SaaS_Cob</fullName>
    <active>true</active>
    <label>SaaS_Cob</label>
</RecordType>