force-app/main/default/objects/Customer_Onboarding__c/validationRules/Invoicing_Mode_to_be_read_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoicing_Mode_to_be_read_only</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!ISNEW() , $Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Customer Onboarding Profile&quot;,$Profile.Name &lt;&gt; &quot;CustomerOnboarding Profile&quot;)</errorConditionFormula>
    <errorDisplayField>Invoicing_Mode__c</errorDisplayField>
    <errorMessage>Invoicing mode cannot be edited.Please contact System Administrator.</errorMessage>
</ValidationRule>