force-app/main/default/objects/Customer_Onboarding__c/validationRules/Onbaording_readonly_when_Synched.validationRule-meta.xml
<ValidationRule>
    <fullName>Onbaording_readonly_when_Synched</fullName>
    <active>true</active>
    <description>When the COB is synced to HQ, it will be read-only for all users except system Admin.</description>
    <errorConditionFormula>AND(!ISNEW() , $Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Customer Onboarding Profile&quot;,$Profile.Name &lt;&gt; &quot;SignContractPage Profile&quot;  ,NOT( ISBLANK(Client_Id__c) ) )</errorConditionFormula>
    <errorMessage>Customer onboarding cannot be updated.Please contact System Administrator.</errorMessage>
</ValidationRule>