force-app/main/default/objects/Customer_Onboarding__c/validationRules/Welcome_Mail.validationRule-meta.xml
<ValidationRule>
    <fullName>Welcome_Mail</fullName>
    <active>true</active>
    <errorConditionFormula>And(PRIORVALUE( POC_Welcome_Mail__c ) =false ,POC_Welcome_Mail__c =true,OR(ISBlank(Name_POC1__c),ISBlank(Name_POC2__c),ISBlank(CL_PANEL_User_Name__c)))</errorConditionFormula>
    <errorMessage>Please fill  POC Assignments and CL PANEL credentials.</errorMessage>
</ValidationRule>