force-app/main/default/objects/Customer_Onboarding__c/listViews/Accepted_COB.listView-meta.xml
<ListView>
    <fullName>Accepted_COB</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Desired_HQ_Name__c</columns>
    <columns>Company_Registered_Name__c</columns>
    <columns>Status__c</columns>
    <columns>IsDocuments_Verified__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Synced To HQ</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Incomplete</value>
    </filters>
    <label>Accepted COB</label>
    <sharedTo>
        <group>Customer_Onboarding_All_View</group>
    </sharedTo>
</ListView>