force-app/main/default/objects/Customer_Onboarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Desired_HQ_Name__c</columns>
    <columns>Company_Registered_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Customer_Onboarding_All_View</group>
        <group>System_Admin</group>
    </sharedTo>
</ListView>