force-app/main/default/objects/Customer_Onboarding__c/listViews/My_Customer_Onboarding.listView-meta.xml
<ListView>
    <fullName>My_Customer_Onboarding</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Desired_HQ_Name__c</columns>
    <columns>Company_Registered_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isCo_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Customer Onboarding</label>
</ListView>