force-app/main/default/objects/Customer_Onboarding__c/listViews/Today_s.listView-meta.xml
<ListView>
    <fullName>Today_s</fullName>
    <columns>NAME</columns>
    <columns>Desired_HQ_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&#39;s</label>
</ListView>